--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^9.1.2",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
