--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "^12.1.2",
+    "expo-router": "^1.5.3",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
